# picoboy

./: .clangd  .gitignore  CMakeLists.txt  MISSING.md  Makefile  PPU.md  README.md  cpu.c  cpu.h  main.c  main_pico.c  out.txt  ppu.c  ppu.h  test.c
include/: cpu.h  debug.h  interrupts.h  ppu.h  timer.h
src/: cpu.c  debug.c  interrupts.c  main.c  main_test.c  ppu.c  timer.c
tools/: run_blargg.sh
