cmake_minimum_required(VERSION 3.13)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(hello C CXX ASM)
pico_sdk_init()
add_executable(hello main.c)
target_link_libraries(hello pico_stdlib pico_rand)
pico_enable_stdio_usb(hello 1)
pico_enable_stdio_uart(hello 0)
pico_add_extra_outputs(hello)
